update for multitask

--- a/scratchpad.ipynb
+++ b/scratchpad.ipynb
@@ -14,6 +14,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "UsageError: Line magic function `%tensorboard` not found.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%tensorboard --logdir /home/jessica/personalized_driving_toyota/checkpoints/lightning_logs/version_1/events.out.tfevents.1669143638.deepx.42906.0"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 62,
    "metadata": {},
    "outputs": [],
