--- a/scratchpad.ipynb
+++ b/scratchpad.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,12 +10,13 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "from decimal import Decimal\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "from scipy.spatial.transform import Rotation\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -54,61 +55,137 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_path = \"/data1/jessica/data/toyota/once_w_lanes_compressed_raw_small_multitask_0-13.hfd5\"\n",
-    "paths = [data_path]\n",
-    "people_seqs = []\n",
-    "subsample = 2\n",
-    "with h5py.File(data_path, \"r\") as f:\n",
-    "    for i, seq_key in enumerate(list(f.keys())):\n",
-    "        iter_dict = {}\n",
-    "        keys_ = f[seq_key].keys()\n",
-    "\n",
-    "        orig_times = f[seq_key][\"orig_times\"][()]\n",
-    "        sorted_idx = np.argsort(orig_times)\n",
-    "        orig_times = [orig_times[i] for i in sorted_idx]\n",
-    "        iter_dict['orig_times'] = orig_times\n",
-    "        for key in keys_:\n",
-    "            if key in [\"angle\", 'orig_times']: continue\n",
-    "            ds_obj = f[seq_key][key][()]#[0::subsample]\n",
-    "            #ds_obj = [ds_obj[i] for i in sorted_idx]\n",
-    "            if key == \"pos\":\n",
-    "                iter_dict[key] = ds_obj\n",
-    "                new_angles = [0]\n",
-    "                for i in range(1, len(ds_obj)):\n",
-    "                    prev = ds_obj[i-1]\n",
-    "                    curr = ds_obj[i]\n",
-    "                    an = angle(prev, curr)*(180/np.pi)\n",
-    "                    new_angles.append(an)\n",
-    "                ds_obj = new_angles\n",
-    "                iter_dict[\"angle\"] = ds_obj\n",
-    "                \n",
-    "                continue\n",
-    "            iter_dict[key] = ds_obj\n",
-    "        people_seqs.append(iter_dict)\n"
+    "def get_angles(seq):\n",
+    "    new_angles = []\n",
+    "    for i in range(1, len(seq)):\n",
+    "        rotation = Rotation.from_quat(seq[i][:4]).as_euler('zyx', degrees=True)    \n",
+    "        prev_rotation = Rotation.from_quat(seq[i-1][:4]).as_euler('zyx', degrees=True)       \n",
+    "        rot = rotation-prev_rotation\n",
+    "        new_angles.append(rot[0])\n",
+    "    new_angles.append(0)\n",
+    "    return np.array(new_angles)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "426\n",
+      "242\n",
+      "121\n",
+      "318\n",
+      "303\n",
+      "291\n",
+      "205\n",
+      "504\n",
+      "179\n",
+      "115\n",
+      "123\n",
+      "175\n",
+      "52\n",
+      "242\n",
+      "306\n",
+      "548\n",
+      "223\n",
+      "189\n",
+      "234\n",
+      "161\n",
+      "225\n",
+      "245\n",
+      "159\n",
+      "203\n",
+      "127\n",
+      "413\n",
+      "403\n",
+      "445\n",
+      "306\n",
+      "292\n",
+      "283\n",
+      "239\n",
+      "122\n",
+      "96\n",
+      "773\n",
+      "597\n",
+      "505\n",
+      "227\n",
+      "280\n",
+      "447\n",
+      "374\n",
+      "288\n",
+      "189\n",
+      "1053\n",
+      "415\n",
+      "432\n",
+      "220\n",
+      "284\n",
+      "46\n",
+      "99\n"
+     ]
+    }
+   ],
+   "source": [
+    "data_path = \"/data1/jessica/data/toyota/once_w_lanes_compressed_raw_small_multitask_all_train.hfd5\"\n",
+    "paths = [data_path]\n",
+    "people_seqs = []\n",
+    "for data_path in paths:\n",
+    "            with h5py.File(data_path, \"r\") as f:\n",
+    "                all_angle_max = 0 \n",
+    "                all_angle_min = 100000\n",
+    "                for i, seq_key in enumerate(list(f.keys())):\n",
+    "                    person_seq = {}\n",
+    "                    keys_ = f[seq_key].keys()\n",
+    "                    for key in keys_:\n",
+    "                        if key == \"angle\": continue\n",
+    "                        seq = f[seq_key][key][()]#[0::subsample]\n",
+    "                        maxseq = seq.max()\n",
+    "                        minseq = seq.min()\n",
+    "                        all_angle_max = maxseq if maxseq > all_angle_max else all_angle_max\n",
+    "                        all_angle_min = minseq if minseq < all_angle_min else all_angle_min\n",
+    "                        if key == \"pos\":\n",
+    "                            seq = get_angles(seq)\n",
+    "                            person_seq[\"angle\"] = seq\n",
+    "                            continue\n",
+    "                        person_seq[key] = seq\n",
+    "                    p_seqs = []\n",
+    "                    people_seqs.append(person_seq)\n",
+    "                    '''for i in range(1, len(person_seq['angle'])):\n",
+    "                        person_seq_new = person_seq\n",
+    "                        if len(person_seq[key][i:i+251]) < 250: break\n",
+    "                        for key in person_seq.keys():\n",
+    "                            person_seq_new[key] = person_seq[key][i:i+251]\n",
+    "                        people_seqs.append(person_seq_new)'''\n",
+    "                                \n",
+    "                    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(True, True)"
+       "13"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "people_seqs[0]['orig_times'][0] <= people_seqs[0]['orig_times'][1], people_seqs[0]['orig_times'][2]<= people_seqs[0]['orig_times'][3], "
+    "#people_seqs_1 = people_seqs\n",
+    "len(people_seqs)"
    ]
   },
   {
@@ -418,7 +495,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
