--- a/analyze_results.ipynb
+++ b/analyze_results.ipynb
@@ -11,22 +11,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "angle_ckpt = ''\n",
-    "dist_ckpt = ''\n",
-    "multitask_ckpt = ''"
-   ]
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Analyze distance preediction error"
+    "Analyze distance prediction error"
    ]
   },
   {
@@ -60,7 +49,7 @@
     }
    ],
    "source": [
-    "preds_path = '/home/jessica/personalized_driving_toyota/checkpoints_comma_distance/lightning_logs/version_40/dist.csv''\n",
+    "preds_path = '/home/jessica/personalized_driving_toyota/checkpoints_comma_distance/lightning_logs/version_40/dist.csv'\n",
     "df = pd.read_csv(preds_path)\n",
     "df.columns = ['preds', 'targets']\n",
     "df = df[df['targets'] != 0]\n",
@@ -84,11 +73,22 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Analyze error per person"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Load the checkpoint\n",
+    "#run for each sequence \n"
+   ]
   }
  ],
  "metadata": {
