update to desired gap

--- a/gradram.ipynb
+++ b/gradram.ipynb
@@ -2,29 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/jessica/.local/lib/python3.10/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "/usr/lib/python3/dist-packages/pkg_resources/__init__.py:116: PkgResourcesDeprecationWarning: 0.1.43ubuntu1 is an invalid version and will not be supported in a future release\n",
-      "  warnings.warn(\n",
-      "/usr/lib/python3/dist-packages/pkg_resources/__init__.py:116: PkgResourcesDeprecationWarning: 1.1build1 is an invalid version and will not be supported in a future release\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from pytorch_grad_cam import GradCAM, HiResCAM, ScoreCAM, GradCAMPlusPlus, AblationCAM, XGradCAM, EigenCAM, FullGrad\n",
-    "from pytorch_grad_cam.utils.model_targets import ClassifierOutputTarget, RawScoresOutputTarget\n",
-    "from pytorch_grad_cam.utils.image import show_cam_on_image\n",
-    "from pytorch_grad_cam.utils.svd_on_activations import get_2d_projection\n",
-    "from pytorch_grad_cam.utils.image import scale_cam_image\n",
-    "from pytorch_grad_cam.utils.model_targets import ClassifierOutputTarget\n",
     "from model import *\n",
     "from module import * \n",
     "from dataloader_comma import *\n",
@@ -42,6 +23,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def scale_cam_image(cam, target_size=None):\n",
+    "    result = []\n",
+    "    for img in cam:\n",
+    "        img = img - np.min(img)\n",
+    "        img = img / (1e-7 + np.max(img))\n",
+    "        if target_size is not None:\n",
+    "            img = cv2.resize(img, target_size)\n",
+    "        result.append(img)\n",
+    "    result = np.float32(result)\n",
+    "\n",
+    "    return result"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,7 +473,7 @@
     "#set checkpoint path\n",
     "PATH = '/home/jessica/personalized_driving_toyota/checkpoints_comma_multitask/lightning_logs/version_23/checkpoints/epoch=31-step=2464.ckpt'#'/home/jessica/personalized_driving_toyota/checkpoints_comma_distance/lightning_logs/version_37/checkpoints/epoch=39-step=1080.ckpt'\n",
     "#PATH = '/home/jessica/personalized_driving_toyota/checkpoints_comma_angle/lightning_logs/version_11/checkpoints/epoch=32-step=891.ckpt'\n",
-    "\n",
+    "PATH = f'/data1/jessica/data/toyota/ckpts/ckpts_desiredcomma_distance/lightning_logs/version_0/checkpoints/epoch=21-step=5434.ckpt'\n",
     "#load model checkpoint \n",
     "checkpoint = torch.load(PATH, map_location=\"cpu\")\n",
     "checkpoint = rename_state_dict_keys(checkpoint['state_dict'])\n",
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -536,7 +536,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class RawScoresOutputTarget:\n",
+    "    def __init__(self):\n",
+    "        pass\n",
+    "\n",
+    "    def __call__(self, model_output):\n",
+    "        return model_output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -549,13 +563,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "grayscale_cam_1 = cam(input_tensor=input_tensor,input_tensor_dist=input_tensor_dist, input_tensor_angle=input_tensor_angle,input_tensor_vego=input_tensor_vego,targets=targets)\n",
-    "sample = 9\n",
-    "path_save = f'./img_{task}/'\n",
+    "path_save = f'./img_desired_{task}/'\n",
     "images = []\n",
     "for i in range(grayscale_cam_1.shape[0]):\n",
     "    grayscale_cam = grayscale_cam_1[i, :]\n",
@@ -566,13 +579,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "imageio.mimsave(f'{path_save}/{sample}.gif', images)"
+    "sample = \"desired_dist\"\n",
+    "imageio.mimsave(f'./{sample}.gif', images)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
