--- a/analyze_results.ipynb
+++ b/analyze_results.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "ckpt_pth_distance = '/data1/jessica/data/toyota/ckpts/ckpts_desiredcomma_distance/lightning_logs/version_18/checkpoints/epoch=49-step=6200.ckpt'\n",
+    "ckpt_pth_distance1 = '/data1/jessica/data/toyota/ckpts/ckpts_desiredcomma_distance/lightning_logs/version_15/checkpoints/epoch=17-step=4446.ckpt'\n",
+    "ckpt_pth_distance2 = '/data1/jessica/data/toyota/ckpts/ckpts_desiredcomma_distance/lightning_logs/version_7/checkpoints/epoch=17-step=2232.ckpt'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def save_preds(logits, target, save_name, path):\n",
     "    df = pd.DataFrame()\n",
     "    df['logits'] = logits.squeeze().tolist()\n",
@@ -137,50 +147,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "p = '/data1/jessica/data/toyota/ckpts/COMMA/checkpoints_comma_distance/lightning_logs/version_49/dist.csv'\n",
-    "p=f'./dist.csv'\n",
-    "df = pd.read_csv(p, header=None)"
+    "p_concept = '/data1/jessica/data/toyota/ckpts/ckpts_desiredcomma_distance/lightning_logs/version_31/distance.csv'\n",
+    "p_concept_resnet = '/data1/jessica/data/toyota/ckpts/ckpts_desiredcomma_distance/lightning_logs/version_30/distance.csv'\n",
+    "p_resnet = '/data1/jessica/data/toyota/ckpts/ckpts_desiredcomma_distance/lightning_logs/version_27/distance.csv'\n",
+    "ps = [p_concept, p_resnet, p_concept_resnet]\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/data1/jessica/data/toyota/ckpts/ckpts_desiredcomma_distance/lightning_logs/version_31/distance.csv\n",
+      "7.4769032266560975 13.488107231032293 23.60375123311526\n",
+      "/data1/jessica/data/toyota/ckpts/ckpts_desiredcomma_distance/lightning_logs/version_27/distance.csv\n",
+      "3.2874232541193598 3.749491704008395 4.153374738864876\n",
+      "/data1/jessica/data/toyota/ckpts/ckpts_desiredcomma_distance/lightning_logs/version_30/distance.csv\n",
+      "3.065006066932451 3.443231526776855 4.999986465982716\n"
+     ]
+    }
+   ],
    "source": [
-    "df.columns = ['preds', 'targets']\n"
+    "for p in ps: \n",
+    "    print(p)\n",
+    "    df = pd.read_csv(p, header=None)\n",
+    "    df.columns = ['preds', 'targets']\n",
+    "\n",
+    "    m = (df['targets'] > 40).astype(bool)  | (df['targets'] == 0).astype(bool) \n",
+    "    loss1 = torch.sqrt(mse_loss(torch.tensor(df['preds']),  torch.tensor(df['targets']), torch.tensor(m)))\n",
+    "    m = (df['targets'] > 50).astype(bool)  | (df['targets'] == 0).astype(bool) \n",
+    "    loss2 = torch.sqrt(mse_loss(torch.tensor(df['preds']),  torch.tensor(df['targets']), torch.tensor(m)))\n",
+    "    m = (df['targets'] > 60).astype(bool)  | (df['targets'] == 0).astype(bool) \n",
+    "    loss3 = torch.sqrt(mse_loss(torch.tensor(df['preds']),  torch.tensor(df['targets']), torch.tensor(m)))\n",
+    "    print(loss1.item(), loss2.item(), loss3.item())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "m = (df['targets'] > 40).astype(bool)  | (df['targets'] == 0).astype(bool) \n",
-    "loss1 = torch.sqrt(mse_loss(torch.tensor(df['preds']),  torch.tensor(df['targets']), torch.tensor(m)))\n",
-    "m = (df['targets'] > 50).astype(bool)  | (df['targets'] == 0).astype(bool) \n",
-    "loss2 = torch.sqrt(mse_loss(torch.tensor(df['preds']),  torch.tensor(df['targets']), torch.tensor(m)))\n",
-    "m = (df['targets'] > 60).astype(bool)  | (df['targets'] == 0).astype(bool) \n",
-    "loss3 = torch.sqrt(mse_loss(torch.tensor(df['preds']),  torch.tensor(df['targets']), torch.tensor(m)))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(5.878825255118932, 5.849154661705669, 8.071627335371298)"
+       "(3.2874232541193598, 3.749491704008395, 4.153374738864876)"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
