--- a/analyze_results.ipynb
+++ b/analyze_results.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -156,6 +156,25 @@
     "p_resnet = '/data1/jessica/data/toyota/ckpts/ckpts_desiredcomma_distance/lightning_logs/version_27/distance.csv'\n",
     "ps = [p_concept, p_resnet, p_concept_resnet]\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p_concept_large = '/data1/shared/jessica/data1/data/toyota/ckpts/ckpts_desiredcomma_distance/lightning_logs/version_36/distance.csv'\n",
+    "df = pd.read_csv(p_concept_large, header=None)\n",
+    "df.columns = ['preds', 'targets']\n",
+    "\n",
+    "m = (df['targets'] > 40).astype(bool)  | (df['targets'] == 0).astype(bool) \n",
+    "loss1 = torch.sqrt(mse_loss(torch.tensor(df['preds']),  torch.tensor(df['targets']), torch.tensor(m)))\n",
+    "m = (df['targets'] > 50).astype(bool)  | (df['targets'] == 0).astype(bool) \n",
+    "loss2 = torch.sqrt(mse_loss(torch.tensor(df['preds']),  torch.tensor(df['targets']), torch.tensor(m)))\n",
+    "m = (df['targets'] > 60).astype(bool)  | (df['targets'] == 0).astype(bool) \n",
+    "loss3 = torch.sqrt(mse_loss(torch.tensor(df['preds']),  torch.tensor(df['targets']), torch.tensor(m)))\n",
+    "print(loss1.item(), loss2.item(), loss3.item())"
    ]
   },
   {
@@ -878,9 +897,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
-   "name": "python3"
+   "name": "base"
   },
   "language_info": {
    "codemirror_mode": {
@@ -892,7 +911,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
