--- a/analyse_results/analyze_results.ipynb
+++ b/analyse_results/analyze_results.ipynb
@@ -2,22 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/lib/python3/dist-packages/pkg_resources/__init__.py:116: PkgResourcesDeprecationWarning: 0.1.43ubuntu1 is an invalid version and will not be supported in a future release\n",
-      "  warnings.warn(\n",
-      "/usr/lib/python3/dist-packages/pkg_resources/__init__.py:116: PkgResourcesDeprecationWarning: 1.1build1 is an invalid version and will not be supported in a future release\n",
-      "  warnings.warn(\n"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'model'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m/home/jessica/personalized_driving_toyota/analyse_results/analyze_results.ipynb Cell 1\u001b[0m in \u001b[0;36m4\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Bdeepz.ucsd.edu/home/jessica/personalized_driving_toyota/analyse_results/analyze_results.ipynb#W0sdnNjb2RlLXJlbW90ZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mmatplotlib\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mpyplot\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mplt\u001b[39;00m \n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Bdeepz.ucsd.edu/home/jessica/personalized_driving_toyota/analyse_results/analyze_results.ipynb#W0sdnNjb2RlLXJlbW90ZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mpytorch_lightning\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mpl\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell://ssh-remote%2Bdeepz.ucsd.edu/home/jessica/personalized_driving_toyota/analyse_results/analyze_results.ipynb#W0sdnNjb2RlLXJlbW90ZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mmodel\u001b[39;00m \u001b[39mimport\u001b[39;00m \u001b[39m*\u001b[39m\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Bdeepz.ucsd.edu/home/jessica/personalized_driving_toyota/analyse_results/analyze_results.ipynb#W0sdnNjb2RlLXJlbW90ZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mpathlib\u001b[39;00m \u001b[39mimport\u001b[39;00m Path\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Bdeepz.ucsd.edu/home/jessica/personalized_driving_toyota/analyse_results/analyze_results.ipynb#W0sdnNjb2RlLXJlbW90ZQ%3D%3D?line=5'>6</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mmodule\u001b[39;00m \u001b[39mimport\u001b[39;00m \u001b[39m*\u001b[39m \n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'model'"
      ]
     }
    ],
    "source": [
     "import pandas as pd\n",
+    "import sys\n",
+    "sys.path.append(\"../\")\n",
     "import matplotlib.pyplot as plt \n",
     "import pytorch_lightning as pl\n",
     "from model import *\n",
@@ -51,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,23 +182,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/data1/jessica/data/toyota/ckpts/ckpts_desiredcomma_distance/lightning_logs/version_31/distance.csv\n",
-      "7.4769032266560975 13.488107231032293 23.60375123311526\n",
-      "/data1/jessica/data/toyota/ckpts/ckpts_desiredcomma_distance/lightning_logs/version_27/distance.csv\n",
-      "3.2874232541193598 3.749491704008395 4.153374738864876\n",
-      "/data1/jessica/data/toyota/ckpts/ckpts_desiredcomma_distance/lightning_logs/version_30/distance.csv\n",
-      "3.065006066932451 3.443231526776855 4.999986465982716\n"
+      "/data1/jessica/data/toyota/ckpts/ckpts_desirednuscenes_distance/lightning_logs/version_3/distance.csv\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'torch' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/home/jessica/personalized_driving_toyota/analyse_results/analyze_results.ipynb Cell 13\u001b[0m in \u001b[0;36m1\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Bdeepz.ucsd.edu/home/jessica/personalized_driving_toyota/analyse_results/analyze_results.ipynb#X15sdnNjb2RlLXJlbW90ZQ%3D%3D?line=7'>8</a>\u001b[0m df\u001b[39m.\u001b[39mcolumns \u001b[39m=\u001b[39m [\u001b[39m'\u001b[39m\u001b[39mpreds\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mtargets\u001b[39m\u001b[39m'\u001b[39m]\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Bdeepz.ucsd.edu/home/jessica/personalized_driving_toyota/analyse_results/analyze_results.ipynb#X15sdnNjb2RlLXJlbW90ZQ%3D%3D?line=9'>10</a>\u001b[0m m \u001b[39m=\u001b[39m (df[\u001b[39m'\u001b[39m\u001b[39mtargets\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m>\u001b[39m \u001b[39m40\u001b[39m)\u001b[39m.\u001b[39mastype(\u001b[39mbool\u001b[39m)  \u001b[39m|\u001b[39m (df[\u001b[39m'\u001b[39m\u001b[39mtargets\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m)\u001b[39m.\u001b[39mastype(\u001b[39mbool\u001b[39m) \n\u001b[0;32m---> <a href='vscode-notebook-cell://ssh-remote%2Bdeepz.ucsd.edu/home/jessica/personalized_driving_toyota/analyse_results/analyze_results.ipynb#X15sdnNjb2RlLXJlbW90ZQ%3D%3D?line=10'>11</a>\u001b[0m loss1 \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39msqrt(mse_loss(torch\u001b[39m.\u001b[39mtensor(df[\u001b[39m'\u001b[39m\u001b[39mpreds\u001b[39m\u001b[39m'\u001b[39m]),  torch\u001b[39m.\u001b[39mtensor(df[\u001b[39m'\u001b[39m\u001b[39mtargets\u001b[39m\u001b[39m'\u001b[39m]), torch\u001b[39m.\u001b[39mtensor(m)))\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Bdeepz.ucsd.edu/home/jessica/personalized_driving_toyota/analyse_results/analyze_results.ipynb#X15sdnNjb2RlLXJlbW90ZQ%3D%3D?line=11'>12</a>\u001b[0m m \u001b[39m=\u001b[39m (df[\u001b[39m'\u001b[39m\u001b[39mtargets\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m>\u001b[39m \u001b[39m50\u001b[39m)\u001b[39m.\u001b[39mastype(\u001b[39mbool\u001b[39m)  \u001b[39m|\u001b[39m (df[\u001b[39m'\u001b[39m\u001b[39mtargets\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m)\u001b[39m.\u001b[39mastype(\u001b[39mbool\u001b[39m) \n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Bdeepz.ucsd.edu/home/jessica/personalized_driving_toyota/analyse_results/analyze_results.ipynb#X15sdnNjb2RlLXJlbW90ZQ%3D%3D?line=12'>13</a>\u001b[0m loss2 \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39msqrt(mse_loss(torch\u001b[39m.\u001b[39mtensor(df[\u001b[39m'\u001b[39m\u001b[39mpreds\u001b[39m\u001b[39m'\u001b[39m]),  torch\u001b[39m.\u001b[39mtensor(df[\u001b[39m'\u001b[39m\u001b[39mtargets\u001b[39m\u001b[39m'\u001b[39m]), torch\u001b[39m.\u001b[39mtensor(m)))\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'torch' is not defined"
      ]
     }
    ],
    "source": [
+    "p_concept = '/data1/jessica/data/toyota/ckpts/ckpts_desirednuscenes_distance/lightning_logs/version_3/distance.csv'\n",
+    "p_concept_resnet = '/data1/jessica/data/toyota/ckpts/ckpts_desiredcomma_distance/lightning_logs/version_30/distance.csv'\n",
+    "p_resnet = '/data1/jessica/data/toyota/ckpts/ckpts_desiredcomma_distance/lightning_logs/version_27/distance.csv'\n",
+    "ps = [p_concept]#, p_resnet, p_concept_resnet]\n",
     "for p in ps: \n",
     "    print(p)\n",
     "    df = pd.read_csv(p, header=None)\n",
@@ -897,9 +910,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "base"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -911,14 +924,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.6"
   },
-  "orig_nbformat": 4,
-  "vscode": {
-   "interpreter": {
-    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
-   }
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
