--- a/analyse_results/analyze_results.ipynb
+++ b/analyse_results/analyze_results.ipynb
@@ -2,21 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'model'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m/home/jessica/personalized_driving_toyota/analyse_results/analyze_results.ipynb Cell 1\u001b[0m in \u001b[0;36m4\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Bdeepz.ucsd.edu/home/jessica/personalized_driving_toyota/analyse_results/analyze_results.ipynb#W0sdnNjb2RlLXJlbW90ZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mmatplotlib\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mpyplot\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mplt\u001b[39;00m \n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Bdeepz.ucsd.edu/home/jessica/personalized_driving_toyota/analyse_results/analyze_results.ipynb#W0sdnNjb2RlLXJlbW90ZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mpytorch_lightning\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mpl\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell://ssh-remote%2Bdeepz.ucsd.edu/home/jessica/personalized_driving_toyota/analyse_results/analyze_results.ipynb#W0sdnNjb2RlLXJlbW90ZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mmodel\u001b[39;00m \u001b[39mimport\u001b[39;00m \u001b[39m*\u001b[39m\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Bdeepz.ucsd.edu/home/jessica/personalized_driving_toyota/analyse_results/analyze_results.ipynb#W0sdnNjb2RlLXJlbW90ZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mpathlib\u001b[39;00m \u001b[39mimport\u001b[39;00m Path\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Bdeepz.ucsd.edu/home/jessica/personalized_driving_toyota/analyse_results/analyze_results.ipynb#W0sdnNjb2RlLXJlbW90ZQ%3D%3D?line=5'>6</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mmodule\u001b[39;00m \u001b[39mimport\u001b[39;00m \u001b[39m*\u001b[39m \n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'model'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import sys\n",
@@ -54,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,9 +151,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.2377828837582094 2.2811100614554243 2.7371959975609763\n"
+     ]
+    }
+   ],
    "source": [
     "p_concept_large = '/data1/shared/jessica/data1/data/toyota/ckpts/ckpts_desiredcomma_distance/lightning_logs/version_36/distance.csv'\n",
     "df = pd.read_csv(p_concept_large, header=None)\n",
@@ -182,33 +178,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/data1/jessica/data/toyota/ckpts/ckpts_desirednuscenes_distance/lightning_logs/version_3/distance.csv\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'torch' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/home/jessica/personalized_driving_toyota/analyse_results/analyze_results.ipynb Cell 13\u001b[0m in \u001b[0;36m1\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Bdeepz.ucsd.edu/home/jessica/personalized_driving_toyota/analyse_results/analyze_results.ipynb#X15sdnNjb2RlLXJlbW90ZQ%3D%3D?line=7'>8</a>\u001b[0m df\u001b[39m.\u001b[39mcolumns \u001b[39m=\u001b[39m [\u001b[39m'\u001b[39m\u001b[39mpreds\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mtargets\u001b[39m\u001b[39m'\u001b[39m]\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Bdeepz.ucsd.edu/home/jessica/personalized_driving_toyota/analyse_results/analyze_results.ipynb#X15sdnNjb2RlLXJlbW90ZQ%3D%3D?line=9'>10</a>\u001b[0m m \u001b[39m=\u001b[39m (df[\u001b[39m'\u001b[39m\u001b[39mtargets\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m>\u001b[39m \u001b[39m40\u001b[39m)\u001b[39m.\u001b[39mastype(\u001b[39mbool\u001b[39m)  \u001b[39m|\u001b[39m (df[\u001b[39m'\u001b[39m\u001b[39mtargets\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m)\u001b[39m.\u001b[39mastype(\u001b[39mbool\u001b[39m) \n\u001b[0;32m---> <a href='vscode-notebook-cell://ssh-remote%2Bdeepz.ucsd.edu/home/jessica/personalized_driving_toyota/analyse_results/analyze_results.ipynb#X15sdnNjb2RlLXJlbW90ZQ%3D%3D?line=10'>11</a>\u001b[0m loss1 \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39msqrt(mse_loss(torch\u001b[39m.\u001b[39mtensor(df[\u001b[39m'\u001b[39m\u001b[39mpreds\u001b[39m\u001b[39m'\u001b[39m]),  torch\u001b[39m.\u001b[39mtensor(df[\u001b[39m'\u001b[39m\u001b[39mtargets\u001b[39m\u001b[39m'\u001b[39m]), torch\u001b[39m.\u001b[39mtensor(m)))\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Bdeepz.ucsd.edu/home/jessica/personalized_driving_toyota/analyse_results/analyze_results.ipynb#X15sdnNjb2RlLXJlbW90ZQ%3D%3D?line=11'>12</a>\u001b[0m m \u001b[39m=\u001b[39m (df[\u001b[39m'\u001b[39m\u001b[39mtargets\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m>\u001b[39m \u001b[39m50\u001b[39m)\u001b[39m.\u001b[39mastype(\u001b[39mbool\u001b[39m)  \u001b[39m|\u001b[39m (df[\u001b[39m'\u001b[39m\u001b[39mtargets\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m)\u001b[39m.\u001b[39mastype(\u001b[39mbool\u001b[39m) \n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Bdeepz.ucsd.edu/home/jessica/personalized_driving_toyota/analyse_results/analyze_results.ipynb#X15sdnNjb2RlLXJlbW90ZQ%3D%3D?line=12'>13</a>\u001b[0m loss2 \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39msqrt(mse_loss(torch\u001b[39m.\u001b[39mtensor(df[\u001b[39m'\u001b[39m\u001b[39mpreds\u001b[39m\u001b[39m'\u001b[39m]),  torch\u001b[39m.\u001b[39mtensor(df[\u001b[39m'\u001b[39m\u001b[39mtargets\u001b[39m\u001b[39m'\u001b[39m]), torch\u001b[39m.\u001b[39mtensor(m)))\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'torch' is not defined"
+      "/data1/shared/jessica/data3/data/toyota/ckpts/ckpts_desirednuscenes_distance/lightning_logs/version_6/distance.csv\n",
+      "76.1355558517616 71.09726668310437 64.60853187636611\n",
+      "/data1/shared/jessica/data3/data/toyota/ckpts/ckpts_desirednuscenes_distance/lightning_logs/version_9/distance.csv\n",
+      "47.24673438549785 42.9914526653037 37.95446833139395\n",
+      "/data1/shared/jessica/data3/data/toyota/ckpts/ckpts_desirednuscenes_distance/lightning_logs/version_7/distance.csv\n",
+      "23.55610036565606 22.064698008814872 21.647290983398925\n"
      ]
     }
    ],
    "source": [
-    "p_concept = '/data1/jessica/data/toyota/ckpts/ckpts_desirednuscenes_distance/lightning_logs/version_3/distance.csv'\n",
-    "p_concept_resnet = '/data1/jessica/data/toyota/ckpts/ckpts_desiredcomma_distance/lightning_logs/version_30/distance.csv'\n",
-    "p_resnet = '/data1/jessica/data/toyota/ckpts/ckpts_desiredcomma_distance/lightning_logs/version_27/distance.csv'\n",
-    "ps = [p_concept]#, p_resnet, p_concept_resnet]\n",
+    "p_concept = '/data1/shared/jessica/data3/data/toyota/ckpts/ckpts_desirednuscenes_distance/lightning_logs/version_6/distance.csv'\n",
+    "p_concept_resnet = '/data1/shared/jessica/data3/data/toyota/ckpts/ckpts_desirednuscenes_distance/lightning_logs/version_7/distance.csv'\n",
+    "p_resnet = '/data1/shared/jessica/data3/data/toyota/ckpts/ckpts_desirednuscenes_distance/lightning_logs/version_9/distance.csv'\n",
+    "ps = [p_concept, p_resnet, p_concept_resnet]\n",
     "for p in ps: \n",
     "    print(p)\n",
     "    df = pd.read_csv(p, header=None)\n",
@@ -910,9 +900,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
-   "name": "python3"
+   "name": "base"
   },
   "language_info": {
    "codemirror_mode": {
@@ -924,7 +914,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4
  },
