--- a/analyse_results/analyze_results.ipynb
+++ b/analyse_results/analyze_results.ipynb
@@ -25,6 +25,68 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "140 nuscenes\n",
+      "248 comma\n",
+      "10 nuscenes\n",
+      "25 comma\n",
+      "70 nuscenes\n",
+      "14 comma\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "import pandas as pd\n",
+    "import sys\n",
+    "sys.path.append(\"../\")\n",
+    "import matplotlib.pyplot as plt \n",
+    "import pytorch_lightning as pl\n",
+    "from model import *\n",
+    "from pathlib import Path\n",
+    "from module import * \n",
+    "import altair as alt\n",
+    "from pytorch_lightning.callbacks.progress import TQDMProgressBar\n",
+    "import torch \n",
+    "from pytorch_lightning.callbacks.early_stopping import EarlyStopping\n",
+    "import argparse\n",
+    "import numpy as np\n",
+    "from pytorch_lightning.callbacks import ModelCheckpoint\n",
+    "from  pytorch_lightning.loggers.tensorboard import TensorBoardLogger\n",
+    "import h5py\n",
+    "dataset_type = 'train'\n",
+    "for dataset_type in [\"train\", \"val\", \"test\"]:\n",
+    "    data_path = '/data1/jessica/data/toyota/nuscenes/test_mini_nuscenes.hfd5' if dataset_type == \"val\" else ('/data1/jessica/data/toyota/nuscenes/train_consec_nuscenes.hfd5' if dataset_type == \"train\" else '/data1/jessica/data/toyota/nuscenes/train_2_2_consec_nuscenes.hfd5')\n",
+    "    \n",
+    "    h5_file = h5py.File(data_path, \"r\")\n",
+    "    keys = list(h5_file.keys())\n",
+    "    person_seq = {}\n",
+    "    print(len(keys), \"nuscenes\")\n",
+    "    ground_truth = 'normal'\n",
+    "    data_path = f\"/data1/jessica/data/toyota/comma_{dataset_type}_filtered.h5py\" if ground_truth == \"regular\" else f\"/data1/jessica/data/toyota/comma_{dataset_type}_w_desired_filtered.h5py\"\n",
+    "    h5_file = h5py.File(data_path, \"r\")\n",
+    "    keys = list(h5_file.keys())\n",
+    "    person_seq = {}\n",
+    "    print(len(keys), 'comma')\n",
+    "    '''seq_key  = keys[26]\n",
+    "    keys_ = h5_file[seq_key].keys()#'steering', 'brake', 'available_distance', 'image', 'utime', 'vehicle_speed'\n",
+    "    file = h5_file\n",
+    "\n",
+    "    for key in keys_:   \n",
+    "        if key == 'description': continue                    \n",
+    "        seq = file[seq_key][key][()]\n",
+    "        person_seq[key] = torch.from_numpy(np.array(seq).astype(float)).type(torch.float32)\n",
+    "    sequences = person_seq'''"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -900,9 +962,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "base"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -914,7 +976,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4
  },
